--- a/app/src/main/res/layout/home_list.xml
+++ b/app/src/main/res/layout/home_list.xml
@@ -187,7 +187,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="30dp"
                         android:layout_marginEnd="8dp"
-                        android:src="@drawable/apk_install"
+                        android:src="@drawable/install_mobile"
                         android:scaleType="centerInside"
                         android:adjustViewBounds="true"/>
                     <ImageView
