--- a/app/src/main/res/layout/activity_offline.xml
+++ b/app/src/main/res/layout/activity_offline.xml
@@ -161,11 +161,16 @@
                 app:fel_size_left="0dp"
                 app:fel_size_right="0dp"
                 app:fel_size_bottom="40dp">
-                <ListView
-                    android:id="@+id/listview"
+                <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+                    android:id="@+id/swipe"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:choiceMode="none"/>
+                    android:layout_height="wrap_content">
+                    <ListView
+                        android:id="@+id/listview"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:choiceMode="none"/>
+                </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
             </com.bosphere.fadingedgelayout.FadingEdgeLayout>
         </LinearLayout>
     </LinearLayout>
