--- a/app/src/main/res/layout/home_list.xml
+++ b/app/src/main/res/layout/home_list.xml
@@ -25,11 +25,11 @@
             android:paddingBottom="8dp"
             android:layout_marginBottom="5dp">
             <ImageView
-                android:id="@+id/apkicon"
+                android:id="@+id/image"
                 android:layout_width="wrap_content"
                 android:layout_height="50dp"
                 android:layout_marginEnd="8dp"
-                android:src="@drawable/install_mobile"
+                android:src="@drawable/app_logo_transparent"
                 android:scaleType="centerCrop"
                 android:adjustViewBounds="true"/>
             <TextView
@@ -218,5 +218,15 @@
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
+        <TextView
+            android:id="@+id/end_of_list"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:padding="8dp"
+            android:text="@string/end_of_list"
+            android:textSize="12sp"
+            android:textColor="#ff9e9e9e"
+            android:fontFamily="@font/cyberpunk"/>
     </LinearLayout>
 </LinearLayout>
